.err
844_1.c: In function 'bool backspaceCompare(char*, char*)':
844_1.c:5:13: error: 'strlen' was not declared in this scope
     int i = strlen(S)-1;
             ^~~~~~
844_1.c:5:13: note: 'strlen' is defined in header '<cstring>'; did you forget to '#include <cstring>'?
844_1.c:1:1:
+#include <cstring>
 // 比较含退格的字符串
844_1.c:5:13:
     int i = strlen(S)-1;
             ^~~~~~
